@@ -1,3 +1,8 @@
+2013-07-02  Tristan Gingold  <gingold@adacore.com>
+	   
+	* internal.h (C_STTLS, C_GTLS): Define.
+	* xcoff.h (XMC_TL, XMC_TU, XMC_TE): Define.
+
 2013-02-04  Alan Modra  <amodra@gmail.com>
 
 	* ti.h (SWAP_OUT_RELOC_EXTRA): Define.
